--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --color: #003809;
+  --color1: #008716;
   --color2: #001a12;
   --back: #e6ede6;
 }
@@ -15,7 +16,13 @@ html {
 }
 
 body {
-  width: 100vw;
+  background-color: #fff;
+  max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
   display: flex;
 }
 
@@ -24,24 +31,47 @@ main {
   max-width: 820px;
   margin: 0 auto;
   padding: 2rem;
+  position: relative;
 }
 
 aside {
-  background-color: var(--back);
+  background-color: var(--color2);
   color: var(--color);
   width: 20rem;
-  height: 18rem;
-  margin: 2rem;
-  padding: 2rem;
-  border-radius: 0.5rem;
+  height: 100dvh;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   position: sticky;
-  top: 50%;
-  translate: 0 -50%;
-  display: none;
+  top: 0;
+}
+aside nav {
+  font-family: sans-serif;
+  background-color: var(--color);
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.5rem;
+  overflow: hidden;
 }
 aside a {
-  color: var(--color2);
+  width: 100%;
+  height: 2rem;
+  display: grid;
+  place-items: center;
   text-decoration: none;
+}
+aside a:hover {
+  filter: brightness(1.2);
+}
+.nav__link {
+  font-weight: bolder;
+  background-color: var(--color1);
+  color: #fff;
+}
+.nav__sublink {
+  background-color: var(--color);
+  color: var(--back);
 }
 
 h1 {
@@ -54,17 +84,20 @@ h1 {
 
 img {
   width: 100%;
+  margin-top: 1rem;
+  border-radius: 1rem;
 }
 
-.subtitle {
+strong.subtitle {
+  font-size: 1.2rem;
   font-family: sans-serif;
   color: var(--color);
 }
-.subtitle span {
-  color: var(--color2);
-}
 h2.subtitle {
-  text-decoration: 2px underline;
+  background-color: var(--color2);
+  color: var(--back);
+  padding: 0 1rem;
+  border-radius: 0.2rem;
 }
 
 .code-block {
@@ -120,21 +153,40 @@ strong.reflexion__title {
 }
 
 #logo {
+  height: fit-content;
   display: flex;
   align-items: center;
+  justify-content: end;
   gap: 10px;
-  position: fixed;
-  top: 2rem;
-  right: 5rem;
 }
 #logo img {
   width: 30px;
+  margin: 0;
 }
 #logo strong {
   font-size: 1.08rem;
+  color: var(--back);
   display: flex;
   flex-direction: column;
 }
 #logo strong span {
   font-size: 1rem;
+}
+
+footer {
+  font-family: sans-serif;
+  font-size: 0.9rem;
+  color: #777;
+  width: 100%;
+  height: 50px;
+  display: grid;
+  place-content: center;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+footer b {
+  color: #999;
+  font-weight: normal;
 }
